# holy_products

./: .pre-commit-config.yaml  README.md  hacs.json  pyproject.toml
.ai/: planning.md
custom_components/holy_products/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/holy_products/translations/: de.json
